# CAMEL

./: .gitignore  README.md  _tmp_check_st.py  main.py  main_pipeline.py  pyproject.toml  requirements.txt  requirements_in.txt  settings.py  virulencefinder.json
app/: camel.py
app/command/: command.py
app/components/: filesystemhelper.py  statisticsutils.py
app/connection/: connection.py
app/error/: invalidinputspecificationerror.py  pipelineexecutionerror.py  toolexecutionerror.py
app/io/: tool_io.py  tool_io_file.py  tool_io_value.py  toolio.py  tooliodb.py  tooliodirectory.py  tooliofile.py  tooliovalue.py
app/loggers/: log_manager.py  logmanager.py
app/parameter/: parameter.py
app/pipeline/: pipeline.py  snakepipeline.py  snakestep.py  step.py  yamlpipeline.py  yamlstep.py
app/services/: basetoolservice.py  dbtoolservice.py  pipelineservice.py  service.py  stepservice.py  tool_service.py  toolservice.py  yamltoolservice.py
app/snakemake/: snakemaketestutils.py  snakemakeutils.py
app/tools/: tool.py
camel/: requirements.txt
camel/app/: camel.py  config.py
camel/config/: __init__.py  camel.yml  camel.yml.sample  db.yml  db.yml.sample  logging.yml  main.yml  main.yml.sample
camel/examples/: running_tools.py
camel/resources/: __init__.py
camel/scripts/: cli.py  main.py
camel/snakefiles/: abritamr.py  abritamr.smk  amrfinder.smk  assembly.py  assembly.smk  assembly_flye.smk  assembly_spades.smk  bacmet.py  bacmet.smk  confindr.py  confindr.smk  contamination_check_kraken.py  contamination_check_kraken.smk  core.py  core.smk  downsampling.py  downsampling.smk  gene_detection.py  gene_detection.smk  gene_detection_blast.smk  gene_detection_kma.smk  human_read_scrubbing.py  human_read_scrubbing.smk  lrefinder.py  lrefinder.smk  mobsuite.py  mobsuite.smk  mykrobe.py  mykrobe.smk  polish_assembly_long.py  polish_assembly_long.smk  polish_assembly_short.smk  quality_checks.py  quality_checks.smk  quast.smk  (+16 more)
config/: __init__.py  db.yml  logging.yml  main.yml  snakelogging.yml
examples/: running_pipelines.py  running_tools.py
pipeline/: pipeline.py  step.py
resources/: __init__.py
tool_data/: export_tool_data.py
(+2314 files in other folders)
